--- a/resources/frontend-assets/sass/helpers/_general.scss
+++ b/resources/frontend-assets/sass/helpers/_general.scss
@@ -30,7 +30,12 @@ a{
         opacity: .9;
     }
 }
-
+.breadcrumb-item a {
+    color: #000;
+}
+.breadcrumb-item.active a {
+    color: var(--thm-primary-color);
+}
 img {
     max-width: 100%;
 }
