--- a/resources/frontend-assets/sass/partials/_navbar.scss
+++ b/resources/frontend-assets/sass/partials/_navbar.scss
@@ -1,12 +1,13 @@
 ._navbar{
     background-color: rgba(255, 255, 255, 0.507);
-
     @media (max-width:768px) {
         position: fixed;
         z-index: 999;
         top: 0;
         left: 0;
         width: 100%;
+        background-color: #fff;
+        box-shadow: -3px -1px 15px 0px #0000001c;
     }
     ul{
         list-style: none;
@@ -43,15 +44,21 @@
         @media (max-width:768px) {
             position: fixed;
             top: calc(70px + .6rem*2);
-            .rtl & {  right: -100%;}
-            .ltr & {  left: -100%; }
+            .rtl & {  right: 0;}
+            .ltr & {  left: 0; }
+            .active & {
+                .rtl & {  transform: translateX(0);}
+                .ltr & {  transform: translateX(0); }
+            }
             width: 100%;
+            transform: translateX(100%);
             // height: 100%;
             bottom: 0;
             max-width: 350px;
-            transition:cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transition:all .27s cubic-bezier(0.215, 0.610, 0.355, 1);
             z-index: 99999;
             overflow: auto;
+            background-color: #fff;
         }
     }
 
@@ -217,6 +224,50 @@
                 }
             }
         }
+    }
+
+    //Phone bars
+    &__phone-bars{
+        display: flex;
+        flex-direction: column;
+        .rtl & { margin-right: auto; margin-left: .9rem;}
+        .ltr & { margin-left: auto; margin-right: .9rem;}
+        margin-top: 33px;
+        cursor: pointer;
+        @media (min-width: 769px) {
+            display: none;
+        }
+        & > span{
+            width: 35px;
+            height: 3px;
+            border-radius: 47px;
+            display: block;
+            background-color: var(--thm-primary-color);
+            margin-bottom: 7.6px;
+            transition: all .3s ease;
+            transform-origin: right;
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+
+        &.active >span{
+            &:first-child, &:nth-child(3) {
+                height: 3px;
+            }
+            &:first-child {
+                transform: rotate(-43deg);
+            }
+            &:nth-child(3) {
+                transform: rotate(43deg);
+
+            }
+            &:nth-child(2) {
+                opacity:0;
+            }
+        }
+
+
     }
 
 }
