--- a/resources/frontend-assets/sass/_variables.scss
+++ b/resources/frontend-assets/sass/_variables.scss
@@ -9,7 +9,7 @@ $line-height-base: 1.6;
 $bg-color1:#034ea2;
 $bg-color2:#16263f;
 $thm-primary-color: #f26822;
-$pic_sizes: 30, 40, 50, 100, 120, 150, 200, 250, 300, 500;
+$pic_sizes: 30, 40, 50, 75, 100, 120, 150, 200, 250, 300, 500;
 
 :root{
     --sidebar-width:256px;
