--- a/resources/frontend-assets/sass/pages/_auth.scss
+++ b/resources/frontend-assets/sass/pages/_auth.scss
@@ -54,7 +54,10 @@
                         padding-top: 0;
                     }
                 }
-                >input, >select {
+                >textarea{
+                    overflow: hidden;
+                }
+                >input, >select, >textarea {
                     border: none;
                     border-radius: 40px 0 0 40px;
                     padding: 11px 21px;
