--- a/resources/backend-assets/sass/partials/_content.scss
+++ b/resources/backend-assets/sass/partials/_content.scss
@@ -1,26 +1,49 @@
 .page-content{
+    position: relative;
+    padding: 1rem 0;
     @media (min-width:769px) {
         width: calc(100% - var(--sidebar-width));
         max-width: calc(100% - var(--sidebar-width));
         margin-left: auto;
-        padding: 1.5rem;
-
         .rtl & {
             margin-left: unset;
             margin-right: auto;
         }
     }
 
-    @media (min-width:1000px) {
-        padding: 1.5rem 3.5rem;
+
+    .main-breadcrumb {
+        padding: 1.4rem;
+        padding-bottom: 7rem;
+        background-color: transparentize($bg-color2, 0)!important;
+        // background-repeat: no-repeat;
+        // background-size: cover;
     }
 
-    @media (min-width:1500px) {
-        padding: 1.5rem 7rem;
+    .mxw-1600 {max-width: 1600px; margin: 0 auto;}
+
+    .app-content {
+        position: absolute;
+        top: calc(100% - 8rem);
+        left: 0;
+        right: 0;
+        max-width: 1600px;
+        margin: 0 auto;
+        @media (min-width:769px) {
+            padding: 1.5rem;
+        }
+        @media (min-width:1000px) {
+            padding: 1.5rem 2rem;
+        }
+
+        @media (min-width:1500px) {
+            padding: 1.5rem 2rem;
+        }
+
+        @media (max-width:768px) {
+            padding: 1.5rem;
+        }
     }
 
-    @media (max-width:768px) {
-        padding: 1.5rem;
-    }
 }
 
