--- a/resources/frontend-assets/sass/app.scss
+++ b/resources/frontend-assets/sass/app.scss
@@ -22,5 +22,6 @@
 @import 'pages/home';
 @import 'pages/auth';
 @import 'pages/artist-profile';
+@import 'pages/blogs';
 
 // @import 'sweetalert2';
