--- a/resources/frontend-assets/sass/app.scss
+++ b/resources/frontend-assets/sass/app.scss
@@ -15,6 +15,7 @@
 
 /* Partials */
 @import 'partials/navbar';
+@import 'partials/footer';
 // @import 'partials/content';
 // @import 'partials/error_page';
 
