--- a/resources/backend-assets/sass/helpers/_general.scss
+++ b/resources/backend-assets/sass/helpers/_general.scss
@@ -116,3 +116,89 @@ textarea.is-invalid ~ .tox-tinymce {
     border: solid 1px #dc3545;
 }
 
+
+.notification-item{
+    display: block;
+    .d-flex{
+        padding: 0 20px;
+    }
+}
+
+.notifications-dropdown {
+    .dropdown-menu{
+        width: max-content;
+        max-width: 350px;
+        min-width: 250px;
+        @media (max-width: 768px) {
+            position: fixed!important;
+            left: 0!important;
+            right: 0!important;
+            width: 100%!important;
+            top: 56px!important;
+            bottom: 0!important;
+            overflow: auto!important;
+            z-index: 999!important;
+            max-width: 100%!important;
+        }
+    }
+    .pushNotifications__{
+        max-height: 300px;
+        overflow: auto;
+        @media (max-width: 768px) {
+            max-height: calc(100% - 41px);
+        }
+    }
+
+    .btn:focus,.btn:active{
+        box-shadow: none;
+        background-color: #f7f7f7a6;
+    }
+}
+
+.notificationsCount[data-count="0"] {
+    display:none;
+}
+
+.custom-file-input {
+    label{
+        position: relative;
+        cursor: pointer;
+        overflow: hidden;
+        img {
+            width: 156px;
+            height: 156px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        i {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #0000004f;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 30px;
+            color: var(--thm-primary-color);
+            transition: all .21s ease-in-out;
+            opacity: 0;
+        }
+        &:hover, &:focus{
+            i {opacity: 1;}
+        }
+    }
+    input {
+        display: none;
+    }
+}
+
+.preview {
+    overflow: hidden;
+    width: 160px;
+    height: 160px;
+    margin: 10px;
+    border: 1px solid red;
+}
