--- a/resources/backend-assets/sass/helpers/_variables.scss
+++ b/resources/backend-assets/sass/helpers/_variables.scss
@@ -1,7 +1,7 @@
 $bg-color1:#121d2f;
 $bg-color2:#16263f;
 $thm-primary-color: #f26822;
-$avatar_sizes: 30, 40, 50, 100, 120, 200, 250, 300, 500;
+$avatar_sizes: 30, 40, 50, 100, 120, 150, 200, 250, 300, 500;
 
 :root{
     --sidebar-width:256px;
