--- a/resources/backend-assets/sass/components/_input.scss
+++ b/resources/backend-assets/sass/components/_input.scss
@@ -40,20 +40,20 @@ label.file-label {
                 padding-top: 0;
             }
         }
-        >textarea{
-            &::-webkit-scrollbar {
-                width: 0;
-            }
+        // >textarea{
+        //     &::-webkit-scrollbar {
+        //         width: 0;
+        //     }
 
-            &::-webkit-scrollbar-track {
-                -webkit-box-shadow: none;
-            }
+        //     &::-webkit-scrollbar-track {
+        //         -webkit-box-shadow: none;
+        //     }
 
-            &::-webkit-scrollbar-thumb {
-              background-color: transparent;
-              outline: none;
-            }
-        }
+        //     &::-webkit-scrollbar-thumb {
+        //       background-color: transparent;
+        //       outline: none;
+        //     }
+        // }
         >input, >select, >textarea {
             border: solid 1px var(--thm-primary-color);
             border-radius: 40px 0 0 40px;
