--- a/resources/frontend-assets/sass/pages/_home.scss
+++ b/resources/frontend-assets/sass/pages/_home.scss
@@ -21,8 +21,8 @@
         transform: translateX(-50%);
     }
     .hero-carousel-item {
-        height: 768px;
-        max-height: 76vh;
+        height: 421px;
+        max-height: 421px;
         img {
             width: 100%;
             height: 100%;
@@ -110,6 +110,7 @@
         background: url("../assets/images/bgs/paint.png");
         background-position: 87px 185px;
         background-size: 180px;
+        z-index: 1;
     }
 }
 .artwork-showcase_ {
