--- a/resources/frontend-assets/sass/app.scss
+++ b/resources/frontend-assets/sass/app.scss
@@ -24,5 +24,6 @@
 @import 'pages/auth';
 @import 'pages/artist-profile';
 @import 'pages/blogs';
+@import 'pages/product';
 
 // @import 'sweetalert2';
