--- a/resources/frontend-assets/sass/pages/_artist-profile.scss
+++ b/resources/frontend-assets/sass/pages/_artist-profile.scss
@@ -1,4 +1,4 @@
-.artist-profile-header {
+.artist-profile-header,.store-profile-header {
     .avatar {
         width: 150px;
         height: 150px;
@@ -13,17 +13,18 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            pointer-events: none;
         }
     }
 
-    .artist-name{
+    .artist-name,.store-name{
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
 }
 
-.artist-profile-tabs {
+.artist-profile-tabs,.store-profile-tabs {
     overflow: auto;
     .tabs__{
         width: max-content;
