--- a/resources/frontend-assets/sass/helpers/_general.scss
+++ b/resources/frontend-assets/sass/helpers/_general.scss
@@ -306,3 +306,7 @@ div#artistsSlider .owl-nav>button:hover {
 img{
     pointer-events: none;
 }
+
+[name="phone"] {
+    direction: ltr!important;
+}
