--- a/resources/backend-assets/sass/partials/_sidebar.scss
+++ b/resources/backend-assets/sass/partials/_sidebar.scss
@@ -94,6 +94,7 @@
                     &>a{
                         background-color: $bg-color1;
                         color: $thm-primary-color;
+                        font-weight: 900;
                     }
                 }
             }
