--- a/resources/frontend-assets/sass/_variables.scss
+++ b/resources/frontend-assets/sass/_variables.scss
@@ -6,15 +6,15 @@ $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-$bg-color1:#034ea2;
+$bg-color1:#f26822;
 $bg-color2:#16263f;
-$thm-primary-color: #f26822;
+$thm-primary-color: #034ea2;
 $pic_sizes: 30, 40, 50, 75, 100, 120, 150, 200, 250, 300, 500;
 
 :root{
     --sidebar-width:256px;
     --navbar-height:56px;
-    --bs-primary-rgb:242,104,34;
-    --thm-primary-color: #f26822;
+    --bs-primary-rgb:3, 78, 162;
+    --thm-primary-color: #034ea2;
     --thm-font:'Roboto', 'Opan Sans', sans-serif;;
 }
