--- a/resources/frontend-assets/sass/components/_buttons.scss
+++ b/resources/frontend-assets/sass/components/_buttons.scss
@@ -1,6 +1,7 @@
 .carousel-link-btn {
     background-color: #000;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1.7rem;
+    padding-top: 0.7rem;
     font-size: 18px;
     color: #fff;
     margin-top: 2rem;
@@ -14,8 +15,8 @@
 .primary-btn {
     background-color: #000;
     color: #fff;
-    padding: .7rem 2.3rem;
-    padding-top: .9rem;
+    padding: 0.5rem 1.3rem;
+    padding-top: 0.7rem;
     text-transform: uppercase;
     display: inline-block;
     transition: all .21s ease-in-out;
